docs: :memo: README with project details and features; modified Prettier configuration; removed unused images

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "singleQuote": false,
   "semi": false,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "jsxSingleQuote": true
 }
